--- a/CSS/reader.css
+++ b/CSS/reader.css
@@ -5,24 +5,29 @@
     line-height:48px;
     overflow: hidden;
 }
+
+#mainText{
+    margin: 0 auto;height: 490px;overflow: hidden;
+}
+
 #main{
     font-size: 36px;
     width: 100%;
-    height: 70%;
-    writing-mode:tb-rl;
-    font-family: Kindness;
     position: relative;
     right: 0;
-    -webkit-transition:all 1s ease;
-    -moz-transition:all 1s ease;
-    -ms-transition:all 1s ease;
-    -o-transition:all 1s ease;
-    transition:all 1s ease;
 }
 
-#pagerNav{
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
+.bgColor{
+    background-color: lightgoldenrodyellow;
+}
+
+.hard{
+    background-color: grey;
+}
+
+.hie{
+    writing-mode:tb-rl;
+    width: 500px;
+    height: 450px;
+    margin:20px;
 }
